--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="css/index.css">
     <title>MDA - Movement based drawing</title>
 </head>
