--- a/paint.html
+++ b/paint.html
@@ -12,6 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script type="" src="https://kit.fontawesome.com/aa083c690a.js" crossorigin="anonymous"></script>
     <script type="module" src="JS/paint.js"></script>
+    <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="css/paint.css">
     <title>MDA - Movement based drawing</title>
 </head>
