--- a/index.html
+++ b/index.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
-<!-- 
-    Theo Neusser
-    IDA-P3C
-    15.01.2024
-    index.html
- -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="manifest" href="manifest.webmanifest">
-    <link rel="stylesheet" href="css/index.css">
-    <title>MDA - Movement based drawing</title>
+    <title>Document</title>
+    
 </head>
-<body>
+<body class="container">
     <header>
-        <h1>Welcome to Movement Based drawing</h1>
-
-        <h2>Your new interactive paint app!</h2>
+        <h1 class="text-center">Kitesurf</h1>
     </header>
+    <main class="row">
+        <div id="form-weight">
+            <h2 class="text-center">Please input your weight</h2>
+            <form action="" method="get" class="d-flex justify-content-center col-12">
+                <label for="weight">Weight</label>
+                <input type="text" name="weight" id="weight">
+                <button type="submit">Calculate</button>
+            </form>
+        </div>
 
-    <main>
-        <a href="paint.html"><button id="start-btn">Click here to start</button></a>
+        <div id="knots" style="display: none;">
+            <h2 id="knots-display" class="text-center">
+
+            </h2>
+        </div>
     </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
